<resources>
    <string name="app_name">Cookbook</string>

    <string name="title_section1">My Recipes</string>
    <string name="title_section2">Saved</string>
    <string name="title_section4">Profile</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorites</string>

    <string name="title_activity_new_recipe">NewRecipe</string>
    <string name="title_activity_main">Cookbook</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_open_recipe">OpenRecipe</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_user_info">UserInfo</string>


    <string name="server">http://cookbook.nonagon.eu</string>

    <string name="hello_world">Hello world!</string>
    <string name="TitleText">Title</string>

    <string name="PrepTime">Preparation time (min)</string>
    <string name="CookTime">Cooking time(min)</string>
    <string name="RecipeImage">recipeImage</string>
    <string name="photoUpload">Upload photo</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="addIngredientButton">Add more</string>
    <string name="addStepButton">Add step</string>
    <string name="insertRecipeButton">+\n NEW RECIPE</string>


    <string name="loginButton">Log In</string>
    <string name="usernameTextView">Username</string>
    <string name="passwordTextView">Password</string>
    <string name="RecipeDescriptionText">Description</string>
    <string name="title_activity_search">Search</string>
    <string name="action_search">action search</string>


</resources>
