<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:screenOrientation="portrait"
    android:configChanges="keyboardHidden|orientation|screenSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.fluxes.cookbook.NewRecipe"
        android:orientation="vertical"
        android:weightSum="1"
        android:baselineAligned="false">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TitleText"
            android:hint="@string/TitleText"
            android:height="60dp"
            android:background="@drawable/textinputborder"
            android:autoText="false"
            android:elegantTextHeight="false"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:text="@string/PrepTime"
                android:id="@+id/PrepTime"
                android:textAlignment="center"
                android:gravity="center"
                android:lines="2"
                android:layout_gravity="center"
                android:layout_weight="0.56"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/enterPrepTime"
                android:layout_weight="3"
                android:background="@drawable/textinputborder"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:inputType="text" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:text="@string/CookTime"
                android:id="@+id/CookTime"
                android:gravity="center"
                android:lines="2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/enterCookTime"
                android:layout_weight="3"
                android:background="@drawable/textinputborder"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:inputType="text" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/RecipeImagesGrid"
            android:rowCount="2"
            android:columnCount="3"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/photoUpload"
                android:id="@+id/photoUploadText"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:id="@+id/imageView1"
                android:layout_column="0"
                android:layout_row="1"
                android:contentDescription="@string/recipeImage1"
                android:onClick="openImageGallery"
                android:scaleType="centerCrop"
                android:background="@drawable/camera_icon" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageView2"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="top"
                android:onClick="openImageGallery"
                android:background="@drawable/camera_icon"
                android:scaleType="centerCrop"
             />


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageView3"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="bottom"
                android:onClick="openImageGallery"
                android:background="@drawable/camera_icon"
                android:scaleType="centerCrop"
             />




            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageView4"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="top"
                android:background="@drawable/camera_icon"
                android:scaleType="centerCrop"
                 />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imageView5"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="bottom"
                android:background="@drawable/camera_icon"
                android:scaleType="centerCrop"
                />

        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:id="@+id/ingredientsText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientsTable">


        </TableLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/addIngredientButton"
            android:textColor="@android:color/darker_gray"
            android:id="@+id/addIng"
            android:onClick="addIngRow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stepsTable">


        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/addStepButton"
            android:textColor="@android:color/darker_gray"
            android:id="@+id/addStep"
            android:onClick="addStepRow" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/saveRecipeButton"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/textinputborder"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</ScrollView>
