<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:screenOrientation="portrait"
    android:configChanges="keyboardHidden|orientation|screenSize">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fluxes.cookbook.OpenRecipe"
    android:id="@+id/openRecipe">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/openRecipeTitle"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textinputborder"
        android:textStyle="italic"

        android:padding="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/PrepTime"
            android:id="@+id/openPrepTimeText"
            android:paddingEnd="5dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:textAlignment="center"
            android:gravity="center"
            android:lines="2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:background="@drawable/textinputborder"
            android:id="@+id/openPrepTime"
            android:paddingEnd="5dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:gravity="center"
            />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/CookTime"
            android:id="@+id/openCookTimeText"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:textStyle="bold"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:background="@drawable/textinputborder"
            android:id="@+id/openCookTime"
            android:textAlignment="center"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecipeDescriptionText"
        android:id="@+id/openDescriptionText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/textinputborder"
        android:id="@+id/openDescription"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:id="@+id/openIngredientsText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/openIngredientsTable">


    </TableLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:id="@+id/openStepsText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/openStepsTable">


    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateRecipe"
        android:id="@+id/openRatingText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openRatingBar"
        android:stepSize="1"
        android:isIndicator="false"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />

</LinearLayout>
</ScrollView>