<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fluxes.cookbook.Login"
    android:id="@+id/loginLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/imageView2"
                android:background="@drawable/recipe"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/textView9"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/usernameTextView"
                    android:id="@+id/textView3"
                    android:layout_above="@+id/password"
                    android:layout_toEndOf="@+id/content" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/username"
                    android:inputType="none"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignStart="@+id/password"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/passwordTextView"
                    android:id="@+id/textView2"
                    android:layout_above="@+id/save"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:layout_below="@+id/username"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                android:id="@+id/save"
                android:layout_below="@+id/password"
                android:layout_alignStart="@+id/textView9"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content"
                android:layout_below="@+id/save"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:editable="false" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
